; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_initthread.c_ossl_ctx_thread_stop.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_initthread.c_ossl_ctx_thread_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@destructor_key = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ossl_ctx_thread_stop(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32**, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @destructor_key, i32 0, i32 0), align 4
  %5 = icmp ne i32 %4, -1
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = call i32** @init_get_thread_local(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @destructor_key, i32 0, i32 1), i32 0, i32 1)
  store i32** %7, i32*** %3, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = load i32**, i32*** %3, align 8
  %10 = call i32 @init_thread_stop(i8* %8, i32** %9)
  br label %11

11:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32** @init_get_thread_local(i32*, i32, i32) #1

declare dso_local i32 @init_thread_stop(i8*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
